assets/main.scss
/* ... */
/* ========================================================================= */
/* TOP NAVBAR
/* ========================================================================= */

.top-navbar {
    height: var(--top-navbar-height);
    padding: 8px 16px;
    position: sticky;
    top: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    z-index: 200; /* Make sure navbar is on top of everything else */
}

// Use [data-theme='light'] or @media here for styling based on light/dark mode???
@media (prefers-color-scheme: light) {
.top-navbar {
    background-color: var(--background-color-secondary);
}
}

@media (prefers-color-scheme: dark) {
    .top-navbar {
        background-color: var(--background-color-secondary);
    }
}

.stuff-at-start {
    display: flex;
    align-items: center;
    gap: 0.5em;
}

// HAMBURGER BUTTON (for menu)
//==============================================================================

.hamburger-button {
    width: 40px;
    height: 40px;

    display: flex;
    justify-content: center;
    align-items: center;

    border-radius: 5px;
    border-width: 0px;

    // background-color: #00b300;

    [data-theme='light'] & {
        background-color: #f0f0f0;
    }

    [data-theme='dark'] & {
        background-color: var(--background-color);
    }

    &:hover {
        cursor: pointer;
        background-color: #949494;
    }
}
@media (min-width: $mobile-to-desktop-breakpoint) {
    .hamburger-button {
        display: none; // Hide the hamburger button on wide screens, we show the left-hand navbar instead
    }
  }

// SITE TITLE
//==============================================================================

.site-title {
    color: var(--main-color);
    margin-right: 0.5em; // A little space between the end of the title and the search input
}

// Disable any link styling for the site title
.site-title a {
    text-decoration: none;
    color: inherit;
    word-break: keep-all; // Prevent the site title from wrapping onto a new line when the screen width is small
}

.stuff-at-end {
    flex-shrink: 1;
    display: flex;
    overflow: hidden;
}

// SEARCH INPUT
// The search modal is elsewhere in this document
.search-input-div {
    position: relative;
    display: flex;
    align-items: center;
    overflow: hidden;

    // The search icon
    .fa-search {
        position: absolute;
        // top: 10px;
        left: 10px;
    }

    input {
        border: 1px solid #555;
        display: block;
        padding: 1px 4px 1px 40px;
        width: 100%;
    }
}

/* Shows the moon icon when light, sun icon when dark */
[data-theme='light'] .d-block-light,
[data-theme='dark'] .d-block-dark {
    display: block !important;
}

.d-block-light {
    color: var(--text-color-primary);
}

.d-block-dark {
    color: var(--text-color-primary);
}

/* ========================================================================= */
/* DRAWER STYLING
/* ========================================================================= */

.drawer-modal{
    display: none;

    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;

    background-color: rgba(0, 0, 0, 0.5);
    z-index: 400;
}

.drawer {

    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;

    width: 0; // Width will be changed by JS
    max-width: 100%; // Make sure it never exceeds the width of the screen on small screens
    overflow-x: hidden;
    transition: 0.5s;
    z-index: 500;

    // padding-right: 10px;

    background-color: var(--background-color);

    div {
        line-height: 1.0;
    }

    .menu-nav a, .menu-nav a:hover, .menu-nav a:visited, .menu-nav a:active {
        font-size: 0.8em;
    }
}

.drawer-inner {
    padding-right: 10px;
}

.drawer-top-row-with-close-button {
    display: flex;
    justify-content: end;
    align-items: center;

    height: 40px;

    padding: 10px 10px 0px 0px;
}

.drawer-close-button {
    display: flex;
    justify-content: center;
    align-items: center;

    width: 35px;
    height: 35px;

    font-size: 35px;

    border-width: 0;
    border-radius: 5px;

    [data-theme='dark'] & {
        background-color: var(--background-color-secondary);
    }
}

/* ========================================================================= */
/* WRAPPER BELOW NAVBAR
/* ========================================================================= */

.wrapper-below-top-navbar {
    display: flex;
    flex-direction: row;
}

/* ========================================================================= */
/* LEFT-HAND NAVBAR
/* ========================================================================= */

.left-navbar {
  display: none;
}
@media (min-width: $mobile-to-desktop-breakpoint) {
  .left-navbar {
    display: block;
  }
}

.left-navbar {
    min-width: 300px;
    max-width: 300px;
    border-right: 1px solid;
    // margin-top: -60px;
    border-color: var(--border-color);
}

/*
Padding provides offset so it doesn't collide with top navbar
*/
.left-navbar-padding {
    // padding-top: 60px;
    padding-right: 10px;
    // Sticky works well if the total menu height is small enough that it doesn't need
    // to be scrollable. However this is not the case with this site!
    // position: sticky;
    top: 0;
}
/* ... */

